y.output

state 0
	$accept: .program $end 
	program: .    (1)
	channeldefs: .    (6)

	ON  reduce 6 (src line 67)
	CHANNEL  shift 5
	.  reduce 1 (src line 37)

	program  goto 1
	channeldefs  goto 2
	channeldef  goto 4
	channeldeflist  goto 3

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  channeldefs.eventlist 

	ON  shift 8
	.  error

	eventlist  goto 6
	event  goto 7

state 3
	channeldefs:  channeldeflist.    (5)
	channeldeflist:  channeldeflist.channeldef 

	CHANNEL  shift 5
	.  reduce 5 (src line 60)

	channeldef  goto 9

state 4
	channeldeflist:  channeldef.    (8)

	.  reduce 8 (src line 83)


state 5
	channeldef:  CHANNEL.vardecl ASSIGN globalvalue SC 

	BOOL  shift 12
	INT  shift 13
	STR  shift 14
	REAL  shift 15
	.  error

	vardecl  goto 10
	type  goto 11

state 6
	program:  channeldefs eventlist.    (2)
	eventlist:  eventlist.event 

	ON  shift 8
	.  reduce 2 (src line 42)

	event  goto 16

state 7
	eventlist:  event.    (4)

	.  reduce 4 (src line 55)


state 8
	event:  ON.ID LPAR inputdecl RPAR FROM ID DO outputdecl streamdecl sendstatement END 

	ID  shift 17
	.  error


state 9
	channeldeflist:  channeldeflist channeldef.    (7)

	.  reduce 7 (src line 76)


state 10
	channeldef:  CHANNEL vardecl.ASSIGN globalvalue SC 

	ASSIGN  shift 18
	.  error


state 11
	vardecl:  type.ID 

	ID  shift 19
	.  error


state 12
	type:  BOOL.    (77)

	.  reduce 77 (src line 537)


state 13
	type:  INT.    (78)

	.  reduce 78 (src line 541)


state 14
	type:  STR.    (79)

	.  reduce 79 (src line 545)


state 15
	type:  REAL.    (80)

	.  reduce 80 (src line 549)


state 16
	eventlist:  eventlist event.    (3)

	.  reduce 3 (src line 52)


state 17
	event:  ON ID.LPAR inputdecl RPAR FROM ID DO outputdecl streamdecl sendstatement END 

	LPAR  shift 20
	.  error


state 18
	channeldef:  CHANNEL vardecl ASSIGN.globalvalue SC 

	NUM  shift 24
	LITERAL  shift 26
	FALSE  shift 22
	TRUE  shift 23
	REALNUM  shift 25
	.  error

	globalvalue  goto 21

state 19
	vardecl:  type ID.    (76)

	.  reduce 76 (src line 512)


state 20
	event:  ON ID LPAR.inputdecl RPAR FROM ID DO outputdecl streamdecl sendstatement END 
	inputdecl: .    (17)

	BOOL  shift 12
	INT  shift 13
	STR  shift 14
	REAL  shift 15
	.  reduce 17 (src line 174)

	vardecl  goto 29
	varlist  goto 28
	inputdecl  goto 27
	type  goto 11

state 21
	channeldef:  CHANNEL vardecl ASSIGN globalvalue.SC 

	SC  shift 30
	.  error


state 22
	globalvalue:  FALSE.    (10)

	.  reduce 10 (src line 104)


state 23
	globalvalue:  TRUE.    (11)

	.  reduce 11 (src line 107)


state 24
	globalvalue:  NUM.    (12)

	.  reduce 12 (src line 110)


state 25
	globalvalue:  REALNUM.    (13)

	.  reduce 13 (src line 113)


state 26
	globalvalue:  LITERAL.    (14)

	.  reduce 14 (src line 116)


state 27
	event:  ON ID LPAR inputdecl.RPAR FROM ID DO outputdecl streamdecl sendstatement END 

	RPAR  shift 31
	.  error


state 28
	inputdecl:  varlist.    (16)
	varlist:  varlist.COMMA vardecl 

	COMMA  shift 32
	.  reduce 16 (src line 159)


state 29
	varlist:  vardecl.    (68)

	.  reduce 68 (src line 480)


state 30
	channeldef:  CHANNEL vardecl ASSIGN globalvalue SC.    (9)

	.  reduce 9 (src line 89)


state 31
	event:  ON ID LPAR inputdecl RPAR.FROM ID DO outputdecl streamdecl sendstatement END 

	FROM  shift 33
	.  error


state 32
	varlist:  varlist COMMA.vardecl 

	BOOL  shift 12
	INT  shift 13
	STR  shift 14
	REAL  shift 15
	.  error

	vardecl  goto 34
	type  goto 11

state 33
	event:  ON ID LPAR inputdecl RPAR FROM.ID DO outputdecl streamdecl sendstatement END 

	ID  shift 35
	.  error


state 34
	varlist:  varlist COMMA vardecl.    (67)

	.  reduce 67 (src line 476)


state 35
	event:  ON ID LPAR inputdecl RPAR FROM ID.DO outputdecl streamdecl sendstatement END 

	DO  shift 36
	.  error


state 36
	event:  ON ID LPAR inputdecl RPAR FROM ID DO.outputdecl streamdecl sendstatement END 
	outputdecl: .    (19)

	OUT  shift 38
	.  reduce 19 (src line 199)

	outputdecl  goto 37

state 37
	event:  ON ID LPAR inputdecl RPAR FROM ID DO outputdecl.streamdecl sendstatement END 

	ID  shift 42
	.  error

	statementlist  goto 40
	streamdecl  goto 39
	statement  goto 41

state 38
	outputdecl:  OUT.varlist SC 

	BOOL  shift 12
	INT  shift 13
	STR  shift 14
	REAL  shift 15
	.  error

	vardecl  goto 29
	varlist  goto 43
	type  goto 11

state 39
	event:  ON ID LPAR inputdecl RPAR FROM ID DO outputdecl streamdecl.sendstatement END 
	sendstatement: .    (25)

	SEND  shift 45
	.  reduce 25 (src line 271)

	sendstatement  goto 44

state 40
	streamdecl:  statementlist.    (20)
	statementlist:  statementlist.statement 

	ID  shift 42
	.  reduce 20 (src line 210)

	statement  goto 46

state 41
	statementlist:  statement.    (22)

	.  reduce 22 (src line 223)


state 42
	statement:  ID.ASSIGN expr SC 

	ASSIGN  shift 47
	.  error


state 43
	outputdecl:  OUT varlist.SC 
	varlist:  varlist.COMMA vardecl 

	COMMA  shift 32
	SC  shift 48
	.  error


state 44
	event:  ON ID LPAR inputdecl RPAR FROM ID DO outputdecl streamdecl sendstatement.END 

	END  shift 49
	.  error


state 45
	sendstatement:  SEND.ID LPAR outputvars RPAR TO ID whenstmt SC 

	ID  shift 50
	.  error


state 46
	statementlist:  statementlist statement.    (21)

	.  reduce 21 (src line 215)


state 47
	statement:  ID ASSIGN.expr SC 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 66
	PIPE  shift 67
	MINUS  shift 71
	NOT  shift 63
	ITE  shift 56
	DIESI  shift 74
	AT  shift 72
	FALSE  shift 75
	TRUE  shift 76
	REALNUM  shift 70
	.  error

	identifier  goto 65
	itexpr  goto 53
	expr  goto 51
	mathexpr  goto 54
	arithmexpr  goto 52
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61
	relexpr  goto 73
	logexpr  goto 55
	logpart  goto 58
	logunary  goto 60
	logterm  goto 64

state 48
	outputdecl:  OUT varlist SC.    (18)

	.  reduce 18 (src line 185)


state 49
	event:  ON ID LPAR inputdecl RPAR FROM ID DO outputdecl streamdecl sendstatement END.    (15)

	.  reduce 15 (src line 121)


state 50
	sendstatement:  SEND ID.LPAR outputvars RPAR TO ID whenstmt SC 

	LPAR  shift 78
	.  error


state 51
	statement:  ID ASSIGN expr.SC 

	SC  shift 79
	.  error


state 52
	expr:  arithmexpr.    (32)

	.  reduce 32 (src line 311)


state 53
	expr:  itexpr.    (33)

	.  reduce 33 (src line 314)


state 54
	arithmexpr:  mathexpr.    (34)
	relexpr:  mathexpr.LE mathexpr 
	relexpr:  mathexpr.L mathexpr 
	relexpr:  mathexpr.GE mathexpr 
	relexpr:  mathexpr.G mathexpr 
	relexpr:  mathexpr.NEQ mathexpr 
	relexpr:  mathexpr.EQ mathexpr 
	relexpr:  mathexpr.TAB mathexpr 
	mathexpr:  mathexpr.ADD addpart 
	mathexpr:  mathexpr.MINUS addpart 

	TAB  shift 86
	EQ  shift 85
	NEQ  shift 84
	GE  shift 82
	G  shift 83
	LE  shift 80
	L  shift 81
	ADD  shift 87
	MINUS  shift 88
	.  reduce 34 (src line 319)


state 55
	arithmexpr:  logexpr.    (35)
	logexpr:  logexpr.OR logpart 

	OR  shift 89
	.  reduce 35 (src line 322)


state 56
	itexpr:  ITE.LPAR logexpr COMMA arithmexpr COMMA arithmexpr RPAR 

	LPAR  shift 90
	.  error


state 57
	mathexpr:  addpart.    (57)
	addpart:  addpart.TIMES mulpart 
	addpart:  addpart.DIV mulpart 

	DIV  shift 92
	TIMES  shift 91
	.  reduce 57 (src line 413)


state 58
	logexpr:  logpart.    (37)
	logpart:  logpart.AND logunary 

	AND  shift 93
	.  reduce 37 (src line 330)


state 59
	addpart:  mulpart.    (60)

	.  reduce 60 (src line 430)


state 60
	logpart:  logunary.    (39)

	.  reduce 39 (src line 338)


state 61
	mulpart:  term.EXP mulpart 
	unary:  term.    (65)

	EXP  shift 94
	.  reduce 65 (src line 456)


state 62
	mulpart:  unary.    (62)

	.  reduce 62 (src line 440)


state 63
	logunary:  NOT.logunary 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 66
	PIPE  shift 67
	MINUS  shift 71
	NOT  shift 63
	DIESI  shift 74
	AT  shift 72
	FALSE  shift 75
	TRUE  shift 76
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 96
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61
	relexpr  goto 73
	logunary  goto 95
	logterm  goto 64

state 64
	logunary:  logterm.    (41)

	.  reduce 41 (src line 346)


state 65
	term:  identifier.    (70)

	.  reduce 70 (src line 492)


state 66
	logterm:  LPAR.logexpr RPAR 
	term:  LPAR.mathexpr RPAR 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 66
	PIPE  shift 67
	MINUS  shift 71
	NOT  shift 63
	DIESI  shift 74
	AT  shift 72
	FALSE  shift 75
	TRUE  shift 76
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 98
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61
	relexpr  goto 73
	logexpr  goto 97
	logpart  goto 58
	logunary  goto 60
	logterm  goto 64

state 67
	term:  PIPE.mathexpr PIPE 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 99
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61

state 68
	term:  NUM.    (73)

	.  reduce 73 (src line 501)


state 69
	term:  LITERAL.    (74)

	.  reduce 74 (src line 504)


state 70
	term:  REALNUM.    (75)

	.  reduce 75 (src line 507)


state 71
	unary:  MINUS.unary 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	unary  goto 101
	term  goto 102

state 72
	unary:  AT.term LBR arithmexpr RBR 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	REALNUM  shift 70
	.  error

	identifier  goto 65
	term  goto 103

state 73
	logterm:  relexpr.    (42)

	.  reduce 42 (src line 351)


state 74
	logterm:  DIESI.term 
	logterm:  DIESI.AT term LBR logexpr RBR 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	AT  shift 105
	REALNUM  shift 70
	.  error

	identifier  goto 65
	term  goto 104

state 75
	logterm:  FALSE.    (46)

	.  reduce 46 (src line 367)


state 76
	logterm:  TRUE.    (47)

	.  reduce 47 (src line 370)


state 77
	identifier:  ID.    (69)

	.  reduce 69 (src line 486)


state 78
	sendstatement:  SEND ID LPAR.outputvars RPAR TO ID whenstmt SC 
	outputvars: .    (30)

	ID  shift 77
	.  reduce 30 (src line 296)

	identifier  goto 108
	outputvars  goto 106
	outvar  goto 107

state 79
	statement:  ID ASSIGN expr SC.    (23)

	.  reduce 23 (src line 228)


state 80
	relexpr:  mathexpr LE.mathexpr 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 109
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61

state 81
	relexpr:  mathexpr L.mathexpr 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 110
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61

state 82
	relexpr:  mathexpr GE.mathexpr 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 111
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61

state 83
	relexpr:  mathexpr G.mathexpr 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 112
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61

state 84
	relexpr:  mathexpr NEQ.mathexpr 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 113
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61

state 85
	relexpr:  mathexpr EQ.mathexpr 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 114
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61

state 86
	relexpr:  mathexpr TAB.mathexpr 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 115
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61

state 87
	mathexpr:  mathexpr ADD.addpart 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	addpart  goto 116
	mulpart  goto 59
	unary  goto 62
	term  goto 61

state 88
	mathexpr:  mathexpr MINUS.addpart 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	addpart  goto 117
	mulpart  goto 59
	unary  goto 62
	term  goto 61

state 89
	logexpr:  logexpr OR.logpart 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 66
	PIPE  shift 67
	MINUS  shift 71
	NOT  shift 63
	DIESI  shift 74
	AT  shift 72
	FALSE  shift 75
	TRUE  shift 76
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 96
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61
	relexpr  goto 73
	logpart  goto 118
	logunary  goto 60
	logterm  goto 64

state 90
	itexpr:  ITE LPAR.logexpr COMMA arithmexpr COMMA arithmexpr RPAR 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 66
	PIPE  shift 67
	MINUS  shift 71
	NOT  shift 63
	DIESI  shift 74
	AT  shift 72
	FALSE  shift 75
	TRUE  shift 76
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 96
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61
	relexpr  goto 73
	logexpr  goto 119
	logpart  goto 58
	logunary  goto 60
	logterm  goto 64

state 91
	addpart:  addpart TIMES.mulpart 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mulpart  goto 120
	unary  goto 62
	term  goto 61

state 92
	addpart:  addpart DIV.mulpart 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mulpart  goto 121
	unary  goto 62
	term  goto 61

state 93
	logpart:  logpart AND.logunary 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 66
	PIPE  shift 67
	MINUS  shift 71
	NOT  shift 63
	DIESI  shift 74
	AT  shift 72
	FALSE  shift 75
	TRUE  shift 76
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 96
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61
	relexpr  goto 73
	logunary  goto 122
	logterm  goto 64

state 94
	mulpart:  term EXP.mulpart 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mulpart  goto 123
	unary  goto 62
	term  goto 61

state 95
	logunary:  NOT logunary.    (40)

	.  reduce 40 (src line 343)


state 96
	relexpr:  mathexpr.LE mathexpr 
	relexpr:  mathexpr.L mathexpr 
	relexpr:  mathexpr.GE mathexpr 
	relexpr:  mathexpr.G mathexpr 
	relexpr:  mathexpr.NEQ mathexpr 
	relexpr:  mathexpr.EQ mathexpr 
	relexpr:  mathexpr.TAB mathexpr 
	mathexpr:  mathexpr.ADD addpart 
	mathexpr:  mathexpr.MINUS addpart 

	TAB  shift 86
	EQ  shift 85
	NEQ  shift 84
	GE  shift 82
	G  shift 83
	LE  shift 80
	L  shift 81
	ADD  shift 87
	MINUS  shift 88
	.  error


state 97
	logexpr:  logexpr.OR logpart 
	logterm:  LPAR logexpr.RPAR 

	RPAR  shift 124
	OR  shift 89
	.  error


state 98
	relexpr:  mathexpr.LE mathexpr 
	relexpr:  mathexpr.L mathexpr 
	relexpr:  mathexpr.GE mathexpr 
	relexpr:  mathexpr.G mathexpr 
	relexpr:  mathexpr.NEQ mathexpr 
	relexpr:  mathexpr.EQ mathexpr 
	relexpr:  mathexpr.TAB mathexpr 
	mathexpr:  mathexpr.ADD addpart 
	mathexpr:  mathexpr.MINUS addpart 
	term:  LPAR mathexpr.RPAR 

	TAB  shift 86
	RPAR  shift 125
	EQ  shift 85
	NEQ  shift 84
	GE  shift 82
	G  shift 83
	LE  shift 80
	L  shift 81
	ADD  shift 87
	MINUS  shift 88
	.  error


state 99
	mathexpr:  mathexpr.ADD addpart 
	mathexpr:  mathexpr.MINUS addpart 
	term:  PIPE mathexpr.PIPE 

	PIPE  shift 126
	ADD  shift 87
	MINUS  shift 88
	.  error


state 100
	term:  LPAR.mathexpr RPAR 

	ID  shift 77
	NUM  shift 68
	LITERAL  shift 69
	LPAR  shift 100
	PIPE  shift 67
	MINUS  shift 71
	AT  shift 72
	REALNUM  shift 70
	.  error

	identifier  goto 65
	mathexpr  goto 127
	addpart  goto 57
	mulpart  goto 59
	unary  goto 62
	term  goto 61

state 101
	unary:  MINUS unary.    (63)

	.  reduce 63 (src line 445)


state 102
	unary:  term.    (65)

	.  reduce 65 (src line 456)


state 103
	unary:  AT term.LBR arithmexpr RBR 

	LBR  shift 128
	.  error


state 104
	logterm:  DIESI term.    (44)

	.  reduce 44 (src line 357)


state 105
	logterm:  DIESI AT.term LBR logexpr RBR 
